# BachelorsThesis-StateEstimation

./: .gitignore  readme.md
ekf/: .gitignore  Cargo.toml  README.md  build.rs  pyproject.toml  requirements.txt  rkf.h
ekf/examples/: binding.py
ekf/src/: adaptive_measurement.rs  c_api.rs  lib.rs  measurement.rs  predict.rs  python.rs
ekf/src/measurements/: adaptive_gnss.rs  adaptive_tof.rs  adaptive_uwb.rs  gnss.rs  mod.rs  tof.rs  uwb.rs
ekf/src/predictors/: constant_velocity.rs  imu.rs  mod.rs
simulation/: .gitignore  requirements-test.txt  requirements.txt
simulation/src/core/: __init__.py  ground_truth.py  sensor_stream.py  simulation_result.py
simulation/src/evaluation/: evaluator.py
simulation/src/evaluation/aligners/: __init__.py  nearest_time_index_aligner.py
simulation/src/evaluation/core/: __init__.py  evaluation_result.py  kalman_estimate.py  kalman_runner.py  metric.py  time_aligner.py
simulation/src/evaluation/metrics/: __init__.py  attitude_rmse.py  nees.py  position_rmse.py  velocity_rmse.py
simulation/src/evaluation/runners/: __init__.py  _ekf_helpers.py  passthrough_runner.py  rust_runner_asteria.py  rust_runner_crazyflie.py
simulation/src/evaluation/search/: __init__.py  bayesian_search.py  search_params.py  search_result.py
simulation/src/helper/: csv_dataloader.py
simulation/src/rocketpy_simulation/: __init__.py  base.py  rocket_simulation.py
simulation/src/rotorpy_simulation/: __init__.py  base.py  crazyflie_sim_validation_plots.py  crazyflie_simulation.py
simulation/tests/: conftest.py
(+69 files in other folders)
